# agent

./: .gitignore  .pre-commit-config.yaml  AUDIT_COMPLETE_READY.md  AUDIT_COMPLETE_SUMMARY.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_README.md  AUDIT_REMEDIATION_STATUS.md  BEFORE_AFTER_GUIDE.md  CHECKLIST_10_10.md  COMPREHENSIVE_AUDIT_REPORT.md  CRITICAL_BUGS_CHECKLIST.md  CRYPTO_MVP_ROADMAP.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  EXACT_CODE_PATCHES.md  FINAL_STATUS_READY_TO_SHIP.md  FIXES_APPLIED.md  FIXES_COMPLETE_REPORT.md  FULL_CODE_AUDIT_REPORT.md  GVEN-COMPLETE-GUIDE.md  INTEGRATION_COMPLETE.md  PRODUCTION_READINESS.md  QUICK_REFERENCE.md  REMEDIATION_COMPLETE_MASTER_SUMMARY.md  REMEDIATION_GUIDE.md  ROBUSTNESS_IMPROVEMENTS.md  SECURITY.md  START_HERE.md  STATUS_10_10.md  TODO.md  api-key.guard.ts  app.module.ts  auth.module.ts  package-lock.json  sensor.py
.github/: CODEOWNERS
gven/: .gitignore  BUILD_SUMMARY.md  IMPROVEMENTS_SUMMARY.txt  LICENSE  Makefile  QUICK_START.md  README.md  docker-compose.yml  test.txt
gven/hardware/: Cargo.toml
gven/hardware/src/: lib.rs  main.rs  tpm.rs
truth-layer/: .env.example  COMPLETION_CERTIFICATE.txt  COMPLETION_REPORT.md  CREATION_SUMMARY.txt  HANDOFF.md  QUICK_REFERENCE.md  QUICK_START.sh  README.md  SECURITY_POSTURE.md  SESSION_2_COMPLETION_SUMMARY.md  SESSION_PROGRESS.md  STATUS_DASHBOARD.sh  STUBS_HONEST_STATUS.md  (+4 more)
truth-layer/zk-engine/: Cargo.toml  Dockerfile  build.rs
truth-layer/zk-engine/proto/: zkengine.proto
truth-layer/zk-engine/src/: lib.rs  main.rs
(+109 files in other folders)
