[package]
name = "pq_signer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
# For MVP: Using HMAC-SHA256 for signatures (replace with liboqs Dilithium-3 when available)



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
