[package]
name = "zk-engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "zk-engine"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.11"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.11"
">
